[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
scikit-image = "^0.19.3"
matplotlib = "^3.5.2"
csdt-stl-tools = "^0.5.3"
scipy = "^1.8.1"
pylint = "^2.14.5"
opencv-contrib-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"